--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,28 @@
 
 # Ignoruj __pycache__
 /__pycache__/
+
+/tennis_reservation/accounts/__pycache__/__init__.cpython-310.pyc
+/tennis_reservation/accounts/__pycache__/admin.cpython-310.pyc
+/tennis_reservation/accounts/__pycache__/apps.cpython-310.pyc
+/tennis_reservation/accounts/__pycache__/models.cpython-310.pyc
+/tennis_reservation/accounts/__pycache__/serializers.cpython-310.pyc
+/tennis_reservation/accounts/__pycache__/urls.cpython-310.pyc
+/tennis_reservation/accounts/__pycache__/views.cpython-310.pyc
+/tennis_reservation/accounts/migrations/__pycache__/__init__.cpython-310.pyc
+/tennis_reservation/accounts/migrations/__pycache__/0001_initial.cpython-310.pyc
+/tennis_reservation/accounts/migrations/__pycache__/0002_alter_customuser_managers.cpython-310.pyc
+/tennis_reservation/reservations/__pycache__/__init__.cpython-310.pyc
+/tennis_reservation/reservations/__pycache__/admin.cpython-310.pyc
+/tennis_reservation/reservations/__pycache__/apps.cpython-310.pyc
+/tennis_reservation/reservations/__pycache__/models.cpython-310.pyc
+/tennis_reservation/reservations/__pycache__/serializers.cpython-310.pyc
+/tennis_reservation/reservations/__pycache__/views.cpython-310.pyc
+/tennis_reservation/reservations/migrations/__pycache__/__init__.cpython-310.pyc
+/tennis_reservation/reservations/migrations/__pycache__/0001_initial.cpython-310.pyc
+/tennis_reservation/reservations/migrations/__pycache__/0002_rename_user_name_reservation_first_name_and_more.cpython-310.pyc
+/tennis_reservation/reservations/migrations/__pycache__/0003_reservation_user.cpython-310.pyc
+/tennis_reservation/tennis_reservation/__pycache__/__init__.cpython-310.pyc
+/tennis_reservation/tennis_reservation/__pycache__/settings.cpython-310.pyc
+/tennis_reservation/tennis_reservation/__pycache__/urls.cpython-310.pyc
+/tennis_reservation/tennis_reservation/__pycache__/wsgi.cpython-310.pyc
