*Dodanie pola notatek
*Dodanie wysyłania potwierdzenia email

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /tennis_reservation/tennis_reservation/__pycache__/wsgi.cpython-310.pyc
 /tennis_reservation/accounts/migrations/__pycache__/0003_customuser_phone.cpython-310.pyc
 /tennis_reservation/reservations/migrations/__pycache__/0004_remove_reservation_agreement_and_more.cpython-310.pyc
+/tennis_reservation/reservations/migrations/__pycache__/0005_reservation_notes.cpython-310.pyc
